config/components/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: incidents-ui
  labels:
    app: incidents-ui
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: incidents-ui
